vendor/bifrost/tls/bindings/x509.odin


	// i2d_X509_NAME marshals |in| as a DER-encoded X.509 Name (RFC 5280), as
	// described in |i2d_SAMPLE|.
	i2d_X509_NAME :: proc(_in: ^X509_NAME, outp: ^^u8) -> i32 ---

	// X509_NAME_dup returns a newly-allocated copy of |name|, or NULL on error.
	X509_NAME_dup :: proc(name: ^X509_NAME) -> ^X509_NAME ---

	// X509_NAME_cmp compares |a| and |b|'s canonicalized forms. It returns zero if
	// they are equal, one if |a| sorts after |b|, -1 if |b| sorts after |a|, and -2
	// on error.
	//
	// TODO(https://crbug.com/boringssl/355): The -2 return is very inconvenient to
	// pass to a sorting function. Can we make this infallible? In the meantime,
	// prefer to use this function only for equality checks rather than comparisons.
	// Although even the library itself passes this to a sorting function.
	X509_NAME_cmp :: proc(a: ^X509_NAME, b: ^X509_NAME) -> i32 ---

	// X509_NAME_get0_der marshals |name| as a DER-encoded X.509 Name (RFC 5280). On
	// success, it returns one and sets |*out_der| and |*out_der_len| to a buffer
	// containing the result. Otherwise, it returns zero. |*out_der| is owned by
	// |name| and must not be freed by the caller. It is invalidated after |name| is
	// mutated or freed.
	X509_NAME_get0_der :: proc(name: ^X509_NAME, out_der: ^^u8, out_der_len: ^c.size_t) -> i32 ---

	// X509_NAME_set makes a copy of |name|. On success, it frees |*xn|, sets |*xn|
	// to the copy, and returns one. Otherwise, it returns zero.
	X509_NAME_set :: proc(xn: ^^X509_NAME, name: ^X509_NAME) -> i32 ---

	// X509_NAME_entry_count returns the number of entries in |name|.
	X509_NAME_entry_count :: proc(name: ^X509_NAME) -> i32 ---

	// X509_NAME_get_index_by_NID returns the zero-based index of the first
	// attribute in |name| with type |nid|, or -1 if there is none. |nid| should be
	// one of the |NID_*| constants. If |lastpos| is non-negative, it begins
	// searching at |lastpos+1|. To search all attributes, pass in -1, not zero.
	//
	// Indices from this function refer to |X509_NAME|'s flattened representation.
	X509_NAME_get_index_by_NID :: proc(name: ^X509_NAME, nid: i32, lastpos: i32) -> i32 ---

	// X509_NAME_get_index_by_OBJ behaves like |X509_NAME_get_index_by_NID| but
	// looks for attributes with type |obj|.
	X509_NAME_get_index_by_OBJ :: proc(name: ^X509_NAME, obj: ^ASN1_OBJECT, lastpos: i32) -> i32 ---

	// X509_NAME_get_entry returns the attribute in |name| at index |loc|, or NULL
	// if |loc| is out of range. |loc| is interpreted using |X509_NAME|'s flattened
	// representation. This function returns a non-const pointer for OpenSSL
	// compatibility, but callers should not mutate the result. Doing so will break
	// internal invariants in the library.
	X509_NAME_get_entry :: proc(name: ^X509_NAME, loc: i32) -> ^X509_NAME_ENTRY ---

	// X509_NAME_delete_entry removes and returns the attribute in |name| at index
	// |loc|, or NULL if |loc| is out of range. |loc| is interpreted using
	// |X509_NAME|'s flattened representation. If the attribute is found, the caller
	// is responsible for releasing the result with |X509_NAME_ENTRY_free|.
	//
	// This function will internally update RDN indices (see |X509_NAME_ENTRY_set|)
	// so they continue to be consecutive.
	X509_NAME_delete_entry :: proc(name: ^X509_NAME, loc: i32) -> ^X509_NAME_ENTRY ---

	// X509_NAME_add_entry adds a copy of |entry| to |name| and returns one on
	// success or zero on error. If |loc| is -1, the entry is appended to |name|.
	// Otherwise, it is inserted at index |loc|. If |set| is -1, the entry is added
	// to the previous entry's RDN. If it is 0, the entry becomes a singleton RDN.
	// If 1, it is added to next entry's RDN.
	//
	// This function will internally update RDN indices (see |X509_NAME_ENTRY_set|)
	// so they continue to be consecutive.
	X509_NAME_add_entry :: proc(name: ^X509_NAME, entry: ^X509_NAME_ENTRY, loc: i32, set: i32) -> i32 ---

	// X509_NAME_add_entry_by_OBJ adds a new entry to |name| and returns one on
	// success or zero on error. The entry's attribute type is |obj|. The entry's
	// attribute value is determined by |type|, |bytes|, and |len|, as in
	// |X509_NAME_ENTRY_set_data|. The entry's position is determined by |loc| and
	// |set| as in |X509_NAME_add_entry|.
	X509_NAME_add_entry_by_OBJ :: proc(name: ^X509_NAME, obj: ^ASN1_OBJECT, type: i32, bytes: ^u8, len: ossl_ssize_t, loc: i32, set: i32) -> i32 ---

	// X509_NAME_add_entry_by_NID behaves like |X509_NAME_add_entry_by_OBJ| but sets
	// the entry's attribute type to |nid|, which should be one of the |NID_*|
	// constants.
	X509_NAME_add_entry_by_NID :: proc(name: ^X509_NAME, nid: i32, type: i32, bytes: ^u8, len: ossl_ssize_t, loc: i32, set: i32) -> i32 ---

	// X509_NAME_add_entry_by_txt behaves like |X509_NAME_add_entry_by_OBJ| but sets
	// the entry's attribute type to |field|, which is passed to |OBJ_txt2obj|.
	X509_NAME_add_entry_by_txt :: proc(name: ^X509_NAME, field: cstring, type: i32, bytes: ^u8, len: ossl_ssize_t, loc: i32, set: i32) -> i32 ---

	// X509_NAME_ENTRY_new returns a new, empty |X509_NAME_ENTRY|, or NULL on error.
	X509_NAME_ENTRY_new :: proc() -> ^X509_NAME_ENTRY ---

	// X509_NAME_ENTRY_free releases memory associated with |entry|.
	X509_NAME_ENTRY_free :: proc(entry: ^X509_NAME_ENTRY) ---

	// X509_NAME_ENTRY_dup returns a newly-allocated copy of |entry|, or NULL on
	// error.
	X509_NAME_ENTRY_dup :: proc(entry: ^X509_NAME_ENTRY) -> ^X509_NAME_ENTRY ---

	// X509_NAME_ENTRY_get_object returns |entry|'s attribute type. This function
	// returns a non-const pointer for OpenSSL compatibility, but callers should not
	// mutate the result. Doing so will break internal invariants in the library.
	X509_NAME_ENTRY_get_object :: proc(entry: ^X509_NAME_ENTRY) -> ^ASN1_OBJECT ---

	// X509_NAME_ENTRY_set_object sets |entry|'s attribute type to |obj|. It returns
	// one on success and zero on error.
	X509_NAME_ENTRY_set_object :: proc(entry: ^X509_NAME_ENTRY, obj: ^ASN1_OBJECT) -> i32 ---

	// X509_NAME_ENTRY_get_data returns |entry|'s attribute value, represented as an
	// |ASN1_STRING|. This value may have any ASN.1 type, so callers must check the
	// type before interpreting the contents. This function returns a non-const
	// pointer for OpenSSL compatibility, but callers should not mutate the result.
	// Doing so will break internal invariants in the library.
	//
	// See |ASN1_STRING| for how values are represented in this library. Where a
	// specific |ASN1_STRING| representation exists, that representation is used.
	// Otherwise, the |V_ASN1_OTHER| representation is used. Note that NULL, OBJECT
	// IDENTIFIER, and BOOLEAN attribute values are represented as |V_ASN1_OTHER|,
	// because their usual representation in this library is not
	// |ASN1_STRING|-compatible.
	X509_NAME_ENTRY_get_data :: proc(entry: ^X509_NAME_ENTRY) -> ^ASN1_STRING ---

	// X509_NAME_ENTRY_set_data sets |entry|'s value to |len| bytes from |bytes|. It
	// returns one on success and zero on error. If |len| is -1, |bytes| must be a
	// NUL-terminated C string and the length is determined by |strlen|. |bytes| is
	// converted to an ASN.1 type as follows:
	//
	// If |type| is a |MBSTRING_*| constant, the value is an ASN.1 string. The
	// string is determined by decoding |bytes| in the encoding specified by |type|,
	// and then re-encoding it in a form appropriate for |entry|'s attribute type.
	// See |ASN1_STRING_set_by_NID| for details.
	//
	// Otherwise, the value is an |ASN1_STRING| with type |type| and value |bytes|.
	// See |ASN1_STRING| for how to format ASN.1 types as an |ASN1_STRING|. If
	// |type| is |V_ASN1_UNDEF| the previous |ASN1_STRING| type is reused.
	X509_NAME_ENTRY_set_data :: proc(entry: ^X509_NAME_ENTRY, type: i32, bytes: ^u8, len: ossl_ssize_t) -> i32 ---

	// X509_NAME_ENTRY_set returns the zero-based index of the RDN which contains
	// |entry|. Consecutive entries with the same index are part of the same RDN.
	X509_NAME_ENTRY_set :: proc(entry: ^X509_NAME_ENTRY) -> i32 ---

	// X509_NAME_ENTRY_create_by_OBJ creates a new |X509_NAME_ENTRY| with attribute
	// type |obj|. The attribute value is determined from |type|, |bytes|, and |len|
	// as in |X509_NAME_ENTRY_set_data|. It returns the |X509_NAME_ENTRY| on success
	// and NULL on error.
	//
	// If |out| is non-NULL and |*out| is NULL, it additionally sets |*out| to the
	// result on success. If both |out| and |*out| are non-NULL, it updates the
	// object at |*out| instead of allocating a new one.
	X509_NAME_ENTRY_create_by_OBJ :: proc(out: ^^X509_NAME_ENTRY, obj: ^ASN1_OBJECT, type: i32, bytes: ^u8, len: ossl_ssize_t) -> ^X509_NAME_ENTRY ---

	// X509_NAME_ENTRY_create_by_NID behaves like |X509_NAME_ENTRY_create_by_OBJ|
	// except the attribute type is |nid|, which should be one of the |NID_*|
	// constants.
	X509_NAME_ENTRY_create_by_NID :: proc(out: ^^X509_NAME_ENTRY, nid: i32, type: i32, bytes: ^u8, len: ossl_ssize_t) -> ^X509_NAME_ENTRY ---

	// X509_NAME_ENTRY_create_by_txt behaves like |X509_NAME_ENTRY_create_by_OBJ|
	// except the attribute type is |field|, which is passed to |OBJ_txt2obj|.
	X509_NAME_ENTRY_create_by_txt :: proc(out: ^^X509_NAME_ENTRY, field: cstring, type: i32, bytes: ^u8, len: ossl_ssize_t) -> ^X509_NAME_ENTRY ---

	// X509_PUBKEY_new returns a newly-allocated, empty |X509_PUBKEY| object, or
	// NULL on error.
	X509_PUBKEY_new :: proc() -> ^X509_PUBKEY ---

	// X509_PUBKEY_free releases memory associated with |key|.
	X509_PUBKEY_free :: proc(key: ^X509_PUBKEY) ---

	// d2i_X509_PUBKEY parses up to |len| bytes from |*inp| as a DER-encoded
	// SubjectPublicKeyInfo, as described in |d2i_SAMPLE|.
	d2i_X509_PUBKEY :: proc(out: ^^X509_PUBKEY, inp: ^^u8, len: c.long) -> ^X509_PUBKEY ---

	// i2d_X509_PUBKEY marshals |key| as a DER-encoded SubjectPublicKeyInfo, as
	// described in |i2d_SAMPLE|.
	i2d_X509_PUBKEY :: proc(key: ^X509_PUBKEY, outp: ^^u8) -> i32 ---

	// X509_PUBKEY_set serializes |pkey| into a newly-allocated |X509_PUBKEY|
	// structure. On success, it frees |*x| if non-NULL, then sets |*x| to the new
	// object, and returns one. Otherwise, it returns zero.
	X509_PUBKEY_set :: proc(x: ^^X509_PUBKEY, pkey: ^EVP_PKEY) -> i32 ---

	// X509_PUBKEY_get0 returns |key| as an |EVP_PKEY|, or NULL if |key| either
	// could not be parsed or is an unrecognized algorithm. The |EVP_PKEY| is cached
	// in |key|, so callers must not mutate the result.
	X509_PUBKEY_get0 :: proc(key: ^X509_PUBKEY) -> ^EVP_PKEY ---

	// X509_PUBKEY_get behaves like |X509_PUBKEY_get0| but increments the reference
	// count on the |EVP_PKEY|. The caller must release the result with
	// |EVP_PKEY_free| when done. The |EVP_PKEY| is cached in |key|, so callers must
	// not mutate the result.
	X509_PUBKEY_get :: proc(key: ^X509_PUBKEY) -> ^EVP_PKEY ---

	// X509_PUBKEY_set0_param sets |pub| to a key with AlgorithmIdentifier
	// determined by |obj|, |param_type|, and |param_value|, and an encoded
	// public key of |key|. On success, it gives |pub| ownership of all the other
	// parameters and returns one. Otherwise, it returns zero. |key| must have been
	// allocated by |OPENSSL_malloc|. |obj| and, if applicable, |param_value| must
	// not be freed after a successful call, and must have been allocated in a
	// manner compatible with |ASN1_OBJECT_free| or |ASN1_STRING_free|.
	//
	// |obj|, |param_type|, and |param_value| are interpreted as in
	// |X509_ALGOR_set0|. See |X509_ALGOR_set0| for details.
	X509_PUBKEY_set0_param :: proc(pub: ^X509_PUBKEY, obj: ^ASN1_OBJECT, param_type: i32, param_value: rawptr, key: ^u8, key_len: i32) -> i32 ---
